# zeus

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _config.yml  appveyor.yml  dependencies.txt  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-linux.yml  build-msvc.yml  build.yml  clang-format.yml  clang.yml  gcc.yml  msvc.yml  release.yml  tests.yml
.github/workflows/scripts/: generate_versions.py  install_deps.ps1  install_deps.sh
cmake/: FetchLibrary.cmake  zeus-config.cmake  zeusConfig.cmake
development/: index.html
docs/: development.md  index.md  style.md
docs/stylesheets/: codehilite.css
include/zeus/: CMakeLists.txt  algorithm.hpp  assert.hpp  compiler.hpp  concepts.hpp  config_parser.hpp  constants.hpp  container_traits.hpp  crtp.hpp  cxx_version.hpp  enum_bitfield.hpp  filesystem.hpp  float.hpp  functional.hpp  linspace.hpp  named_type.hpp  platform.hpp  random.hpp  range.hpp  string.hpp  timer.hpp  type_traits.hpp  zeus.hpp.in
search/: search_index.json
sections/: development.md  development_raw.md
style/: index.html
stylesheets/: dark_theme.css
test/: CMakeLists.txt  algorithm_test.cpp  assert_test.cpp  compiler_test.cpp  concepts_test.cpp  config_parser_test.cpp  container_traits_test.cpp  cxx_version_test.cpp  enum_bitfield_test.cpp  filesystem_test.cpp  float_test.cpp  functional_test.cpp  linspace_test.cpp  named_type_test.cpp  platform_test.cpp  random_test.cpp  range_test.cpp  string_test.cpp  timer_test.cpp  type_traits_test.cpp
tools/: build_dependencies.py
